# dual-channel

./: .gitignore  FIELD_MAPPING_CORE.json  mapping.json  priority_fields.json
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: websocket.py
backend/app/config/: customer_details_field_aliases.json  customer_details_workflow.json  field_aliases.json  lead_workflow_schema.json
backend/app/core/: config.py
backend/app/graph/: __init__.py  factory.py  nodes.py  service.py  state.py
backend/app/llm/: __init__.py  service.py
backend/app/models/: events.py  session.py
backend/app/services/: agent_question_context.py  category_router.py  contextual_extraction.py  core_field_mapping.py  customer_details_workflow.py  deepgram_client.py  extraction_field_selector.py  field_registry.py  field_resolver.py  field_spec.py  field_state_builder.py  gemini_client.py  lead_detail_context.py  lead_profile_merge.py  mapping_audit.py  next_action.py  openai_realtime_client.py  rag_service.py  sarvam_client.py  schema_extraction.py  schema_field_logic.py  schema_metadata.py  schema_normalizer.py  schema_registry.py  session_finalize.py  session_manager.py  session_text.py  (+7 more)
backend/scripts/: ingest.py  pipeline_smoke.py  test_hybrid_search.py  test_rag_chat.py  test_rag_init.py
backend/tests/: test_agent_question_context.py  test_contextual_extraction.py  test_extraction_field_selector.py  test_ingest_preview.py  test_rag_service.py  test_summary_to_chat.py  test_turn_decision.py  test_workflow_integration.py
(+28 files in other folders)
